Add react, webpack, gulp, babel

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Wayne's Blog</title>
+</head>
+<body>
+<div id="content"></div>
+<script src="/dest/js/index.bundle.js"></script>
+</body>
+</html>
