Supporting react-bootstrap

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Wayne's Blog</title>
+    <!--<link rel="stylesheet" href="/css/bootstrap.min.css">-->
 </head>
 <body>
 <div id="content"></div>
-<script src="/dest/js/index.bundle.js"></script>
+<script src="/js/index.bundle.js"></script>
 </body>
 </html>
