fix bug for loading js file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <div id="content"></div>
 <script src="/js/index.bundle.js"></script>
+<script src="/dest/js/index.bundle.js"></script>
 </body>
 </html>
